// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-core example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "plum",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 32,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "fontFamily": "sans-serif",
        "fontSize": 24,
      }
    }
  >
    Hello, world!
  </span>
</div>
`;

exports[`wonder-blocks-core example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click me!
  </div>
  <span
    aria-hidden={true}
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
      }
    }
  >
    This text is hidden from screen readers.
  </span>
</div>
`;

exports[`wonder-blocks-core example 3 1`] = `
<input
  className=""
  placeholder="hello, world"
  style={
    Object {
      "backgroundColor": "pink",
      "fontSize": 30,
    }
  }
  type="text"
/>
`;
